--- a/Final-Project/Quiz/templates/about.html
+++ b/Final-Project/Quiz/templates/about.html
@@ -2,20 +2,19 @@
 
 {% block content %}
     <div class="jumbotron">
-      <h1>Hangman</h1>
+      <h1>Games and More</h1>
     </div>
-    <h1>About hangman</h1>
-    <img src="https://i.ytimg.com/vi/cGOeiQfjYPk/maxresdefault.jpg"
-    alt="how to play"
-    height="100">
+    <h1>About this website!</h1>
+
     <br>
     <hr>
-    <p>The computer will pick a random word. <br>
-      The player will then have to guess this word by<br>
-      inputting one letter at a time. <br>
-      The game is over when the
-      player has <br> used all of their guesses or <br>
-      they have reached the limit of guesses allowed. <br>
+    <p>There are three available games:<br>
+      <ul>
+        <li>The Patronus Quiz</li>
+        <li>Blackjack</li>
+        <li>Coin Toss</li>
+        </ul>
+      <br> Have fun!
       </p>
 
 {% endblock %}
