--- a/Final-Project/Quiz/templates/patquiz.html
+++ b/Final-Project/Quiz/templates/patquiz.html
@@ -1,9 +1,24 @@
 
   {% extends 'fancylayout.html' %}
   {% block content %}
-    <div class="jumbotron">
-      <a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2020/04/23/flamingtext_com_1587612905_267822242.gif" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
-    </div>
+  <style>
+  body {
+    background-image: url('https://i.gifer.com/Z4WK.gif');
+  }
+  p {
+    color: white;
+    font-size: 12px;
+  }
+  form {
+    color: white;
+    font-size: 12px;
+  }
+  h1 {
+    color: white;
+  }
+
+  </style>
+      <div class="title"><a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2020/04/23/flamingtext_com_1587612905_267822242.gif" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a></div>
     <h1>Determining your Patronus....</h1>
 
     <p>When chosing your answer, please put the letter that is in brackets.</p>
