--- a/Final-Project/Quiz/templates/main.html
+++ b/Final-Project/Quiz/templates/main.html
@@ -1,14 +1,37 @@
 
   {% extends 'fancylayout.html' %}
   {% block content %}
-    <div class="jumbotron">
+  <style>
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+    p{
+      color: white;
+      font-family: optima;
+      font-size: 25px;
+    }
+    a {
+      color: white;
+      font-family: arial;
+      font-size: 10px;
+    }
+    .credit {
+      color: white;
+      font-family: arial;
+      font-size: 10px;
+    }
+  </style>
+  <h3>
       <a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2020/04/22/flamingtext_com_1587516795_267822052.gif" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
-    </div>
+</h3>
     <br>
     <hr>
     <p>Welcome to Games and More!</p>
 
-<br/>Logo Design by <a href="https://flamingtext.com/">FlamingText.com</a>
+<br><div class="credit">Logo Design by <a href="https://flamingtext.com/">FlamingText.com</a></div>
 <br>
 <br>
 <br>
