--- a/Final-Project/Quiz/templates/patsstag.html
+++ b/Final-Project/Quiz/templates/patsstag.html
@@ -5,7 +5,7 @@
     font-family: optima;
     color: white;
   }
-  h1 {
+  h3 {
     color: white;
   }
   p {
@@ -18,16 +18,23 @@
   body {
     background-image: url('https://i.gifer.com/Z4WK.gif');
   }
-  ul{
+  ul {
     color: white;
   }
 </style>
   <div class="jumbotron">
     <h1>Your Patronus is:</h1>
   </div>
-  <h2>Sorry, you're not ready to have a patronus now.</h2>
-  <img src="https://thumbs.gfycat.com/SmallSinfulAfricanparadiseflycatcher-mobile.mp4">
+  <h2>Stag</h2>
+  <p>Traditionally seen as ‘King of the Forest’, the stag is the protector of the other animals.</p>
+  <h3>Other people with this patronus:</h3>
+  <p>
+    <ul>
+      <li>Harry Potter</li>
+      <li>James Potter</li>
+    </ul>
+    <img src="https://i.pinimg.com/originals/84/2c/a0/842ca01b7ac9d9e2e9b432d7d8330c9d.gif">
+  </p>
   <br>
   <hr>
-
 {% endblock %}
