--- a/Final-Project/Quiz/templates/bios.html
+++ b/Final-Project/Quiz/templates/bios.html
@@ -1,9 +1,32 @@
 {% extends "fancylayout.html" %}
 
 {% block content %}
-  <div class="jumbotron">
-    <h1>Hangman</h1>
-  </div>
+<style>
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  h2 {
+    font-family: optima;
+    color: white;
+  }
+  h3 {
+    color: white;
+  }
+  p {
+    font-family: "Times New Roman";
+    color: white;
+    font-size: 14px;
+  }
+  ul{
+    color: white;
+  }
+  </style>
+  <h3>
+      <a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2020/04/22/flamingtext_com_1587516795_267822052.gif" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
+</h3>
   <h2>Hydration Nation</h2>
   <p><strong>Eric Feigen</strong>
   <br>
