--- a/Final-Project/Quiz/templates/blgame2.html
+++ b/Final-Project/Quiz/templates/blgame2.html
@@ -1,11 +1,41 @@
+
+{# dealer goes #}
 {% extends 'fancylayout.html' %}
 {% block content %}
+<style>
+  p {
+    font-family: arial;
+    font-size: 14px;
+    color: white;
+  }
+  form {
+    font-family: arial;
+    font-size: 14px;
+  }
+  .jumbotron {
+    font-family: optima;
+  }
+  p.cards {
+    color: white;
+    font-size: 14px;
+  }
+  .cards {
+    color: white;
+    font-size: 14px;
+  }
+
+</style>
   <div class="jumbotron">
     <h1>Welcome to BlackJack</h1>
   </div>
-  <p>Your cards: </p> {{state['first_card']}} {{","}} {{state['second_card']}}
-  <p>Total: </p> {{state['total']}}
-  <div class="jumbotron">
-    <a target="_top" href="https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555999902/shape/mentalfloss/construction_8.gif?itok=1GFBdKOO" ><img src="https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555999902/shape/mentalfloss/construction_8.gif?itok=1GFBdKOO" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
-  </div>
+  <img src="https://www.animatedimages.org/data/media/1049/animated-casino-image-0009.gif">
+  <p>Your cards: </p>
+  <div class="cards"><p>{{state['pfirst_card']}} {{","}} {{state['psecond_card']}}</p></div>
+  <p>Total: </p> <div class="cards"><p>{{state['total']}}</p></div>
+  <div class="cards"><p>{{state['dfirst_card']}} {{","}} {{state['dsecond_card']}}</p></div>
+  <p>Total: </p> <div class="cards"><p>{{state['dealer_total']}}</p></div>
+  <div class="cards"><form method="post" action="/wager"> Type "Stay" to stay or "Hit" to hit. ~
+    <input type="text" name ="herewegoagain">
+  <input type="submit" class="btn btn-lg btn-danger">
+  </form></div>
 {% endblock %}
