--- a/Final-Project/Quiz/templates/pathare.html
+++ b/Final-Project/Quiz/templates/pathare.html
@@ -5,7 +5,7 @@
     font-family: optima;
     color: white;
   }
-  h1 {
+  h3 {
     color: white;
   }
   p {
@@ -25,8 +25,15 @@
   <div class="jumbotron">
     <h1>Your Patronus is:</h1>
   </div>
-  <h2>Sorry, you're not ready to have a patronus now.</h2>
-  <img src="https://thumbs.gfycat.com/SmallSinfulAfricanparadiseflycatcher-mobile.mp4">
+  <h2>Hare</h2>
+  <p>Hares represent being carefree and thoughts beyond imagination.</p>
+  <h3>Other people with this patronus:</h3>
+  <p>
+    <ul>
+      <li>Luna Lovegood</li>
+    </ul>
+    <img src="https://pa1.narvii.com/6402/0aba431619e3288c2602c5f830e4c113b256c144_hq.gif">
+  </p>
   <br>
   <hr>
 
