--- a/Final-Project/Quiz/templates/patjack.html
+++ b/Final-Project/Quiz/templates/patjack.html
@@ -5,7 +5,7 @@
     font-family: optima;
     color: white;
   }
-  h1 {
+  h3 {
     color: white;
   }
   p {
@@ -25,8 +25,15 @@
   <div class="jumbotron">
     <h1>Your Patronus is:</h1>
   </div>
-  <h2>Sorry, you're not ready to have a patronus now.</h2>
-  <img src="https://thumbs.gfycat.com/SmallSinfulAfricanparadiseflycatcher-mobile.mp4">
+  <h2>Jack Russel Terrier</h2>
+  <p>Jack Russels represent loyalty and blind fearlessness.</p>
+  <h3>Other people with this patronus:</h3>
+  <p>
+    <ul>
+      <li>Ron Weasley</li>
+    </ul>
+  <img src="https://vignette.wikia.nocookie.net/harrypotter/images/7/7b/Ron%27s_dog_Patronus.jpg/revision/latest/scale-to-width-down/699?cb=20170108234321">
+  </p>
   <br>
   <hr>
 
