--- a/Final-Project/Quiz/templates/patotter.html
+++ b/Final-Project/Quiz/templates/patotter.html
@@ -5,7 +5,7 @@
     font-family: optima;
     color: white;
   }
-  h1 {
+  h3 {
     color: white;
   }
   p {
@@ -25,8 +25,15 @@
   <div class="jumbotron">
     <h1>Your Patronus is:</h1>
   </div>
-  <h2>Sorry, you're not ready to have a patronus now.</h2>
-  <img src="https://thumbs.gfycat.com/SmallSinfulAfricanparadiseflycatcher-mobile.mp4">
+  <h2>Otter</h2>
+  <p>An otter represents 'that which is hidden, unknown but necessary within the personality'.</p>
+  <h3>Other people with this patronus:</h3>
+  <p>
+    <ul>
+      <li>Hermione Granger</li>
+    </ul>
+  <img src="https://vignette.wikia.nocookie.net/harrypotter/images/f/f3/Hermione_Otter_Patronus.png/revision/latest/scale-to-width-down/699?cb=20170109003508">
+  </p>
   <br>
   <hr>
 
