--- a/Final-Project/Quiz/templates/blgame.html
+++ b/Final-Project/Quiz/templates/blgame.html
@@ -21,6 +21,10 @@
     color: white;
     font-size: 14px;
   }
+  input {
+    color: black;
+    font-size: 14px;
+  }
 </style>
   <div class="jumbotron">
     <h1>Welcome to BlackJack</h1>
