--- a/Final-Project/Quiz/templates/blgame3.html
+++ b/Final-Project/Quiz/templates/blgame3.html
@@ -30,10 +30,10 @@
   </div>
   <img src="https://www.animatedimages.org/data/media/1049/animated-casino-image-0009.gif">
   <p>Your cards: </p>
-  <div class="cards"><p>{{state['pfirst_card']}} {{","}} {{state['psecond_card']}} {{","}} {{state['pthird_card']}}</p></div>
+  <div class="cards"><p>{{state['pfirst_card']}} {{","}} {{state['psecond_card']}} {{","}} {{state['pthird_card']}}{{","}} {{state['pfourth_card']}}</p></div>
   <p>Total: </p> <div class="cards"><p>{{state['total']}}</p></div>
   <div class="cards"><form method="post" action="/wager"> Type "Stay" to stay or "Hit" to hit. ~
-    <input type="text" name ="herewegoagain">
+    <input type="text" name ="fourthtimesthecharm">
   <input type="submit" class="btn btn-lg btn-danger">
   </form></div>
 
