--- a/Final-Project/Quiz/templates/patsstag.html
+++ b/Final-Project/Quiz/templates/patsstag.html
@@ -33,7 +33,7 @@
       <li>Harry Potter</li>
       <li>James Potter</li>
     </ul>
-    <img src="https://i.pinimg.com/originals/84/2c/a0/842ca01b7ac9d9e2e9b432d7d8330c9d.gif">
+    <img src="https://pm1.narvii.com/6310/332cc8d4811283f1255339708c354a657a46b303_00.jpg ">
   </p>
   <br>
   <hr>
