--- a/Final-master/Final-Project/Quiz/templates/jk.html
+++ b/Final-master/Final-Project/Quiz/templates/jk.html
@@ -1,6 +1,27 @@
 
   {% extends 'fancylayout.html' %}
   {% block content %}
+  {% block content %}
+  <style>
+  	p {
+  		font-family: arial;
+  		font-size: 14px;
+  		color: white;
+  	}
+  	form {
+  		font-family: arial;
+  		font-size: 14px;
+  	}
+  	h1 {
+      font-family: arial;
+  		font-size: 14px;
+  		color: white;
+    }
+    label {
+  		color: white;
+  		font-size: 14px;
+  	}
+   </style>
     <div class="jumbotron">
       <a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2020/05/04/flamingtext_com_1588625779_312995097.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
       <br/>Logo Design by <a href="https://flamingtext.com/" >FlamingText.com</a>
