--- a/Final-Project/Quiz/templates/fancylayout.html
+++ b/Final-Project/Quiz/templates/fancylayout.html
@@ -95,6 +95,7 @@ margin: auto;
         <a class="btn btn-info" href="/about">About</a>
 				<a class="btn btn-info" href="/quiz">Quiz</a>
         <a class="btn btn-info" href="/game">Blackjack</a>
+        <a class="btn btn-info" href="/coinflip">Blackjack</a>
         <a class="btn btn-info" href="/bios">Bios of Hydration Nation</a>
 				  </div>
       <hr>
